deployments/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cncamp
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
