deployments/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpclient
  namespace: cncamp
  labels:
    app: httpclient
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpclient
  template:
    metadata:
      labels:
        app: httpclient
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: app
          image: zzzzzsy/cncamp04:refactor-1.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http-app
          resources:
            limits:
              memory: "200Mi"
              cpu: "100m"
            requests:
              memory: "100Mi"
              cpu: "50m"
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            failureThreshold: 3
            periodSeconds: 10
          volumeMounts:
            - name: httpclient-conf
              mountPath: "/usr/app/conf"
              readOnly: true
      volumes:
        - name: httpclient-conf
          configMap:
            defaultMode: 420
            name: httpclient-conf
