deployments/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpclient-service
  namespace: cncamp
  labels:
    app: httpclient
spec:
  selector:
    app: httpclient
  ports:
    - name: http-client
      port: 80
      targetPort: http-app
